[package]
name = "pcache"
version = "0.1.0"
edition = "2024"
description = "Three-layer caching library (L1: moka, L2: Redis, L3: pluggable backend)"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# L1 cache
moka = { version = "0.12", features = ["future"] }

# L2 cache (Redis)
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

[lints]
workspace = true
