[package]
name = "pcache"
version = "0.3.6"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "pcache"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# L1 cache
moka = { version = "0.12", features = ["future"] }

# L2 cache (Redis)
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Python bindings (optional)
[dependencies.pyo3]
version = "0.27"
features = ["extension-module"]
optional = true

[dependencies.pyo3-async-runtimes]
version = "0.27"
features = ["tokio-runtime"]
optional = true

[features]
default = []
python = ["pyo3", "pyo3-async-runtimes"]

# Workspace-wide lints to catch performance issues
[workspace.lints.clippy]
# Catch unnecessary clones
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
clone_on_copy = "warn"

# Catch inefficient String usage
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"

# Catch unnecessary allocations
unnecessary_to_owned = "warn"
implicit_clone = "warn"

# Performance lints
large_enum_variant = "warn"
large_types_passed_by_value = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"

# General best practices
manual_string_new = "warn"
inefficient_to_string = "warn"
