[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pcache"
version = "0.3.6"
description = "Three-layer caching library with Redis pub/sub invalidation"
requires-python = ">=3.11"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "pcache.pcache"
